--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  position: static;
+  position: fixed;
   height: 69px;
   border-bottom: 1px solid seashell;
   display: flex;
@@ -101,4 +101,14 @@ nav a {
   margin: 0px 20px;
   opacity: 1;
   background-color: black;
+}
+
+.contact {
+  width: 1200px;
+  height: 200px;
+}
+
+#footer {
+  display: flex;
+  justify-content: flex-start;
 }
