--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -12,33 +12,41 @@ body {
 }
 
 header {
-  position: fixed;
   height: 69px;
   border-bottom: 1px solid seashell;
+  z-index: 5;
+  background-color: black;
+  width: 100%;
+  position: fixed;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  padding: 9px 0px;
+  top: 0px;
 }
 
 header img {
-  padding-left: 10px;
   height: 50px;
+  padding-left: 10px;
 }
 
 nav ul {
   width: 350px;
   display: flex;
   justify-content: space-between;
+  padding-right: 25px;
 }
 
 nav a {
   text-decoration: underline;
+  color: white;
 }
 
 #content {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  position: absolute;
+  top: 69px;
 }
 
 #mission {
@@ -49,6 +57,7 @@ nav a {
   display: flex;
   justify-content: center;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 .center {
@@ -80,6 +89,7 @@ nav a {
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
+  margin-top: 40px;
 }
 
 #locations h2 {
@@ -109,6 +119,11 @@ nav a {
 }
 
 #footer {
-  display: flex;
-  justify-content: flex-start;
+  width: 100%;
+  position: absolute;
+  left: 20px;
+}
+
+#footer h5 {
+  text-align: left;
 }
